--- a/cilium/additional-manifests.yaml
+++ b/cilium/additional-manifests.yaml
@@ -4,8 +4,9 @@ metadata:
   name: "lb-externalip-pool"
 spec:
   blocks:
-    # 10.0.5.0/24 and 10.0.6.0/24 are the internal Pod and Service ranges.
-    - cidr: "10.0.7.0/24"
+    # 10.0.4.0/23 and 10.0.6.0/23 are the internal Pod and Service ranges in
+    # talos/talos-patch-all.yaml
+    - cidr: "10.0.8.0/24"
 ---
 apiVersion: "cilium.io/v2alpha1"
 kind: CiliumL2AnnouncementPolicy
