--- a/cilium/values.yaml
+++ b/cilium/values.yaml
@@ -218,9 +218,18 @@ cilium:
         enabled: true
     relay:
       # -- Enable Hubble Relay (requires hubble.enabled=true)
-      enabled: true
+      enabled: false
       # -- Roll out Hubble Relay pods automatically when configmap is updated.
       rollOutPods: true
+
+      # Keep more core infra on the control plane.
+      tolerations:
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/control-plane
+          operator: Exists
+      nodeSelector:
+        kubernetes.io/os: linux
+        node-role.kubernetes.io/control-plane: ""
 
       # -- Enable prometheus metrics for hubble-relay on the configured port at
       # /metrics
@@ -233,7 +242,7 @@ cilium:
           enabled: true
     ui:
       # -- Whether to enable the Hubble UI.
-      enabled: true
+      enabled: false
       # -- Roll out Hubble-ui pods automatically when configmap is updated.
       rollOutPods: true
       backend:
@@ -243,6 +252,16 @@ cilium:
         readinessProbe:
           # -- Enable readiness probe for Hubble-ui backend (requires Hubble-ui 0.12+)
           enabled: true
+
+      # Keep more core infra on the control plane.
+      tolerations:
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/control-plane
+          operator: Exists
+      nodeSelector:
+        kubernetes.io/os: linux
+        node-role.kubernetes.io/control-plane: ""
+
       # ingress:
       #   enabled: false
       #   annotations: {}
