--- a/cilium/values.yaml
+++ b/cilium/values.yaml
@@ -131,7 +131,7 @@ cilium:
   # -- Configure L2 pod announcements
   l2podAnnouncements:
     # -- Enable L2 pod announcements
-    enabled: true
+    enabled: false
     # -- Interface used for sending Gratuitous ARP pod announcements
     interface: "enp3s0"
   pmtuDiscovery:
