Renamed fields in clouddns-sa secret, made an injector for it. Switched external-dns to point to google instead of arguing with samba.

--- a/cert-manager/templates/issuers.yaml
+++ b/cert-manager/templates/issuers.yaml
@@ -17,7 +17,7 @@ spec:
             project: symm-custodes
             serviceAccountSecretRef:
               name: clouddns-sa
-              key: key.json
+              key: credential.json
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
@@ -38,4 +38,4 @@ spec:
             project: symm-custodes
             serviceAccountSecretRef:
               name: clouddns-sa
-              key: key.json
+              key: credential.json
