--- a/external-dns/values.yaml
+++ b/external-dns/values.yaml
@@ -26,34 +26,17 @@ external-dns:
   - local.symmatree.com
   - 0.10.in-addr.arpa
 
-  provider:  # @schema type: [object, string];
-    # -- _ExternalDNS_ provider name; for the available providers and how to configure them see [README](https://github.com/kubernetes-sigs/external-dns/blob/master/charts/external-dns/README.md#providers).
-    name: rfc2136
-  env:
-  - name: TSIG_SECRET
-    valueFrom:
-      secretKeyRef:
-        name: external-dns-secret
-        key: TSIG_SECRET
-  - name: TSIG_SECRET_ALG
-    valueFrom:
-      secretKeyRef:
-        name: external-dns-secret
-        key: TSIG_SECRET_ALG
-  - name: TSIG_KEYNAME
-    valueFrom:
-      secretKeyRef:
-        name: external-dns-secret
-        key: TSIG_KEYNAME
-
-  # -- Extra arguments to provide to _ExternalDNS_.
+  provider:
+    name: google
   extraArgs:
-    - --rfc2136-host=10.0.99.1
-    - --rfc2136-port=53
-    - --rfc2136-zone=local.symmatree.com
-    - --rfc2136-zone=0.10.in-addr.arpa
-    - --rfc2136-tsig-secret=$(TSIG_SECRET)
-    - --rfc2136-tsig-secret-alg=$(TSIG_SECRET_ALG)
-    - --rfc2136-tsig-keyname=$(TSIG_SECRET_KEYNAME)
-    - --rfc2136-tsig-axfr 
-    - --rfc2136-create-ptr
+    - --google-project=custodes
+  env:
+    - name: GOOGLE_APPLICATION_CREDENTIALS
+      value: /etc/secrets/service-account/credentials.json
+  extraVolumeMounts:
+    - name: google-service-account
+      mountPath: /etc/secrets/service-account/
+  extraVolumes:
+    - name: google-service-account
+      secret:
+        secretName: clouddns-sa
