Add some namespaces

--- a/static-certs/templates/certificates.yaml
+++ b/static-certs/templates/certificates.yaml
@@ -3,6 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: {{ .name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   dnsNames:
   - {{ .name }}{{ .subdomain }}.{{ $.Values.baseDomain }}
