--- a/cert-manager/templates/issuers.yaml
+++ b/cert-manager/templates/issuers.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: staging-cert
+  namespace: {{ .Release.Namespace }}
 spec:
   acme:
     email: symmetry@pobox.com
@@ -23,6 +24,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: real-cert
+  namespace: {{ .Release.Namespace }}
 spec:
   acme:
     email: symmetry@pobox.com
