--- a/kubernetes-dashboard/Chart.yaml
+++ b/kubernetes-dashboard/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: dashboard
+name: kubernetes-dashboard
 description: Kubernetes Dashboard
 type: application
 
@@ -11,9 +11,9 @@ version: 0.1.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: "7.11.0"
+appVersion: "7.11.1"
 
 dependencies:
-  - name: dashboard
+  - name: kubernetes-dashboard
     version: ~7.11.1
-    repository: https://kubernetes.github.io/
+    repository: https://kubernetes.github.io/dashboard/
