--- a/kubernetes-dashboard/values.yaml
+++ b/kubernetes-dashboard/values.yaml
@@ -2,7 +2,7 @@
 # https://raw.githubusercontent.com/kubernetes/dashboard/refs/heads/release/7.11.1/charts/kubernetes-dashboard/values.yaml
 # then removed settings I'm not changing.
 
-dashboard:
+kubernetes-dashboard:
   # Copyright 2017 The Kubernetes Authors.
   #
   # Licensed under the Apache License, Version 2.0 (the "License");
