--- a/kubernetes-dashboard/values.yaml
+++ b/kubernetes-dashboard/values.yaml
@@ -61,7 +61,8 @@ kubernetes-dashboard:
       issuer:
         name: real-cert
         scope: cluster
-      annotations: {}
+      annotations:
+      - ingress.cilium.io/tls-passthrough: enabled
     tolerations:
     - effect: NoSchedule
       key: node-role.kubernetes.io/control-plane
