single name maybe

--- a/kubernetes-dashboard/values.yaml
+++ b/kubernetes-dashboard/values.yaml
@@ -76,16 +76,16 @@ kubernetes-dashboard:
     proxy:
       type: LoadBalancer
       annotations:
-        "external-dns.alpha.kubernetes.io/hostname": "tales.local.symmatree.com,dashboard.local.symmatree.com"
+        "external-dns.alpha.kubernetes.io/hostname": "dashboard.local.symmatree.com"
     certificates:
       enabled: true
       clusterIssuer: real-cert
       proxy:
         # You aren't supposed to use a DNS name as commonName, but the chart
         # insists on it. It also merges it into dnsNames.
-        commonName: tales.local.symmatree.com
-        dnsNames:
-          - dashboard.local.symmatree.com
+        commonName: dashboard.local.symmatree.com
+        # dnsNames:
+        #   - dashboard.local.symmatree.com
 
       # We aren't even deploying these but the chart tries to get certs anyway.
       admin:
