--- a/static-certs/templates/certificates.yaml
+++ b/static-certs/templates/certificates.yaml
@@ -3,7 +3,8 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: {{ .name }}
-  namespace: {{ .Release.Namespace }}
+  # We don't have a Release.Namespace
+  namespace: {{ .Values.namespace }}
 spec:
   dnsNames:
   - {{ .name }}{{ .subdomain }}.{{ $.Values.baseDomain }}
