--- a/cilium/application.yaml
+++ b/cilium/application.yaml
@@ -1,22 +1,22 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd
-  namespace: argocd
+  name: cilium
+  namespace: cilium
   labels:
-    name: argocd
+    name: cilium
 spec:
   project: default
   source:
     repoURL: https://github.com/symmatree/tales.git
     targetRevision: main
-    path: argocd
+    path: cilium
     helm:
       valueFiles:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: cilium
   syncPolicy:
     # automated:
     #   prune: true
@@ -25,4 +25,5 @@ spec:
       - CreateNamespace=true
     managedNamespaceMetadata:
       annotations:
-        "pod-security.kubernetes.io/warn": baseline
+        "pod-security.kubernetes.io/enforce": privileged
+        "pod-security.kubernetes.io/warn": privileged
