--- a/dns-test.yaml
+++ b/dns-test.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: dnsutils
-  namespace: default
+  namespace: kube-system
 spec:
   containers:
     - name: dnsutils
