--- a/talos/talos-patch-all.yaml
+++ b/talos/talos-patch-all.yaml
@@ -7,23 +7,27 @@ cluster:
     # These two CIDRs are inside my router's 10.0.0.0/16 so they can
     # just ARP appropriately and things will work.
     # 10.0.8.0/24 is the "external" IP range in cilium/additional-manifests.yaml
-    podSubnets:
-      - 10.0.4.0/23
-    serviceSubnets:
-      - 10.0.6.0/23
-  controllerManager:
-    extraArgs:
-      # With /23 allocated total, /25-per-node allows max of 4 nodes
-      "node-cidr-mask-size": 25
-
+    # podSubnets:
+    #   - 10.0.4.0/23
+    # serviceSubnets:
+    #   - 10.0.6.0/23
+  # controllerManager:
+  #   extraArgs:
+  #     # With /23 allocated total, /25-per-node allows max of 4 nodes
+  #     "node-cidr-mask-size": 25
   proxy:
     # Cilium will replace the proxy
     disabled: true
 machine:
   features:
     hostDNS:
+      # Stop rewriting resolv.conf as a test
+      enabled: false
       # Enabling this conflicts with Cilium.
       forwardKubeDNSToHost: false
+    kubePrism:
+      # Reduce variables troubleshooting cilium.
+      enabled: false
   install:
     wipe: true
     extraKernelArgs:
