--- a/cilium/values.yaml
+++ b/cilium/values.yaml
@@ -2,15 +2,13 @@
 # https://raw.githubusercontent.com/cilium/cilium/refs/heads/main/install/kubernetes/cilium/values.yaml
 # Deleted all values I'm not changing.
 cilium:
-  # localhost:7445 if kubeprism is running.
-  k8sServiceHost: "auto"
   # -- (string) Kubernetes service host - use "auto" for automatic lookup from the cluster-info ConfigMap
-  # k8sServiceHost: "localhost"
+  k8sServiceHost: "localhost"
   # @schema
   # type: [string, integer]
   # @schema
   # -- (string) Kubernetes service port
-  # k8sServicePort: 7445
+  k8sServicePort: 7445
 
   # If the amount of requests to the Kubernetes API server exceeds the configured
   # rate limit, the agent will start to throttle requests by delaying
@@ -43,11 +41,6 @@ cilium:
     id: 1
   serviceAccounts:
     nodeinit:
-      # -- Enabled is temporary until https://github.com/cilium/cilium-cli/issues/1396 is implemented.
-      # Cilium CLI doesn't create the SAs for node-init, thus the workaround. Helm is not affected by
-      # this issue. Name and automount can be configured, if enabled is set to true.
-      # Otherwise, they are ignored. Enabled can be removed once the issue is fixed.
-      # Cilium-nodeinit DS must also be fixed.
       enabled: true
 
   # -- Roll out cilium agent pods automatically when configmap is updated.
@@ -119,7 +112,19 @@ cilium:
   autoDirectNodeRoutes: true
   # -- Enable skipping of PodCIDR routes between worker
   # nodes if the worker nodes are in a different L2 network segment.
-  directRoutingSkipUnreachable: true
+  # TODO: Maybe this is the issue?
+  # directRoutingSkipUnreachable: true
+
+  # -- Enable bandwidth manager to optimize TCP and UDP workloads and allow
+  # for rate-limiting traffic from individual Pods with EDT (Earliest Departure
+  # Time) through the "kubernetes.io/egress-bandwidth" Pod annotation.
+  # https://cilium.io/blog/2020/11/10/cilium-19/#bwmanager
+  bandwidthManager:
+    # -- Enable bandwidth manager infrastructure (also prerequirement for BBR)
+    enabled: true
+    # -- Activate BBR TCP congestion control for Pods
+    bbr: true
+
   # -- Configure L2 announcements
   l2announcements:
     # -- Enable L2 announcements
@@ -133,6 +138,7 @@ cilium:
   # -- Configure L2 pod announcements
   l2podAnnouncements:
     # -- Enable L2 pod announcements
+    # Not so we can talk to them but to help routing.
     enabled: true
     # -- Interface used for sending Gratuitous ARP pod announcements
     interface: "enp3s0"
@@ -141,10 +147,19 @@ cilium:
     # the client.
     enabled: true
   bpf:
-    # -- (bool) Allow cluster external access to ClusterIP services.
-    # @default -- `false`
-    lbExternalClusterIP: true
+    # -- (bool) Configure whether direct routing mode should route traffic via
+    # host stack (true) or directly and more efficiently out of BPF (false) if
+    # the kernel supports it. The latter has the implication that it will also
+    # bypass netfilter in the host namespace.
     hostLegacyRouting: false
+    # -- (bool) Enable native IP masquerade support in eBPF
+    masquerade: true
+
+    # -- (string) Mode for Pod devices for the core datapath (veth, netkit, netkit-l2)
+    # @default -- `veth`
+    datapathMode: netkit
+  # -- Enable BPF clock source probing for more efficient tick retrieval.
+  bpfClockProbe: true
 
   envoyConfig:
     # -- Enable CiliumEnvoyConfig CRD
@@ -157,6 +172,8 @@ cilium:
     # -- Set cilium ingress controller to be the default ingress controller
     # This will let cilium ingress controller route entries without ingress class set
     default: true
+    service:
+      allocateLoadBalancerNodePorts: true
   gatewayAPI:
     # -- Enable support for Gateway API in cilium
     # This will automatically set enable-envoy-config as well.
@@ -180,25 +197,6 @@ cilium:
     # See https://docs.cilium.io/en/stable/observability/metrics/#hubble-metrics
     # for more comprehensive documentation about Hubble metrics.
     metrics:
-      # @schema
-      # type: [null, array]
-      # @schema
-      # -- Configures the list of metrics to collect. If empty or null, metrics
-      # are disabled.
-      # Example:
-      #
-      #   enabled:
-      #   - dns:query;ignoreAAAA
-      #   - drop
-      #   - tcp
-      #   - flow
-      #   - icmp
-      #   - http
-      #
-      # You can specify the list of metrics from the helm CLI:
-      #
-      #   --set hubble.metrics.enabled="{dns:query;ignoreAAAA,drop,tcp,flow,icmp,http}"
-      #
       enabled:
         - dns:query;ignoreAAAA
         - drop
@@ -220,7 +218,7 @@ cilium:
         enabled: true
     relay:
       # -- Enable Hubble Relay (requires hubble.enabled=true)
-      enabled: false
+      enabled: true
       # -- Roll out Hubble Relay pods automatically when configmap is updated.
       rollOutPods: true
 
@@ -244,7 +242,7 @@ cilium:
           enabled: true
     ui:
       # -- Whether to enable the Hubble UI.
-      enabled: false
+      enabled: true
       # -- Roll out Hubble-ui pods automatically when configmap is updated.
       rollOutPods: true
       backend:
@@ -264,14 +262,13 @@ cilium:
         kubernetes.io/os: linux
         node-role.kubernetes.io/control-plane: ""
 
-      # ingress:
-      #   enabled: false
-      #   annotations: {}
-      #   # kubernetes.io/ingress.class: nginx
-      #   # kubernetes.io/tls-acme: "true"
-      #   className: ""
-      #   hosts:
-      #     - chart-example.local
+      ingress:
+        enabled: true
+        annotations:
+          cert-manager.io/cluster-issuer: real-cert
+        className: "cilium"
+        hosts:
+          - hubble.local.symmatree.com
 
   ipam:
     # -- Configure IP Address Management mode.
