Seemingly working with static route on unifi for 10.0.4.0/24 to the node ip 10.0.1.50

--- a/cilium/values.yaml
+++ b/cilium/values.yaml
@@ -308,7 +308,8 @@ cilium:
   # direct routing and the Kubernetes CIDR is included in the native routing CIDR,
   # the user must configure the routes to reach pods, either manually or by
   # setting the auto-direct-node-routes flag.
-  ipv4NativeRoutingCIDR: "10.0.0.0/16"
+  ipv4NativeRoutingCIDR: "10.0.4.0/24"
+  enableMasqueradeRouteSource: false
 
   # -- Configure service load balancing
   loadBalancer:
