--- a/cilium/application.yaml
+++ b/cilium/application.yaml
@@ -18,9 +18,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: cilium
   syncPolicy:
-    # automated:
-    #   prune: true
-    #   selfHeal: true
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
     managedNamespaceMetadata:
